HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeIncompleteLayout/Expected.uv
//! Expected diagnostic metadata for the FfiSafeIncompleteLayout rejected-source specimen.

expectedDiagnostic("E-TYP-2628", "rule.23.FfiSafe-Incomplete-Err")
